# pascal

./: .gitignore  CMakeLists.txt  README.md
examples/base/: ClosureEscapeError
src/Pascal/: main.c  parser.c
tests/: run.sh
tests/Pascal/: BuiltinCaseNormalization.disasm  FlatArrayBracketChainConstIndex  FlatArrayBracketChainConstIndex.out  InterfaceAssertionFailure.err  RealIntOverflowTest.err  ShortCircuitTest.disasm  ThreadPoolConcurrentReuseTest  ThreadPoolConcurrentReuseTest.out  ThreadPoolConcurrentWavesTest  ThreadPoolConcurrentWavesTest.out  ThreadPoolSequentialReuseTest  ThreadPoolSequentialReuseTest.out  UserProcCallTest.disasm
tests/compiler/pascal/: manifest.json  run_compiler_tests.py
